# ml_research

./: .gitignore  Modelfile  README.md  Vis_Lab.ipynb  Vis_local_finetune_transformers.py  Vis_local_finetuning_hf_transformers.ipynb  Vis_local_finetuning_unsloth_ollama.ipynb  Vis_local_finetuning_unsloth_ollama_github.ipynb  finetune_with_transformers_cmd_output.txt  main.py  merge_model.py  pyproject.toml  resume_training_dataset.jsonl
cybersecurity_expert_model_final/: README.md  adapter_config.json  adapter_model.safetensors
merged_cyber_model/: config.json  generation_config.json
