[project]
name = "ml-research"
version = "0.1.0"
description = "Native Blackwell Support for D.Eng Praxis"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "pandas>=2.3.3",
    "datasets>=4.4.2",
    "transformers>=4.57.3",
    "peft>=0.18.0",
    "trl>=0.26.2",
    "bitsandbytes>=0.49.0",
    "black>=25.12.0",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128" # Or cu130 if available
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
torchvision = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }
